--- a/epilepsi.conf
+++ b/epilepsi.conf
@@ -1,3 +1,100 @@
+SETTING time_date
+use = "date time"
+
+OPTION "date time"
+date = "%D %T"
+END
+OPTION "time date"
+date = "%T %D"
+END
+
+END
+
+
+SETTING short_date
+use = 
+
+month[0] = "Jan"
+month[1] = "Feb"
+month[2] = "Mar"
+month[3] = "Apr"
+month[4] = "May"
+month[5] = "Jun"
+month[6] = "Jul"
+month[7] = "Aug"
+month[8] = "Sep"
+month[9] = "Oct"
+month[10] = "Nov"
+month[11] = "Dec"
+
+OPTION "yyyy-(mm)MMM-dd"
+date = "%3y-(%2m)%M-%2d"
+END
+OPTION "yyyy-MMM-dd"
+date = "%3y-%M-%2d"
+END
+OPTION "yyyy-mm-dd"
+date = "%3y-%2m-%2d"
+END
+OPTION "yymmdd"
+date = "%{2y%100}%2m%2d"
+END
+OPTION "dd-(mm)MMM-yyyy"
+date = "%2d-(%2m)%M-%3y"
+END
+OPTION "dd-MMM-yyyy"
+date = "%2d-%M-%3y"
+END
+OPTION "dd-mm-yyyy"
+date = "%2d-%2m-%3y"
+END
+OPTION "ddmmyy"
+date = "%2d%2m%{2y%100}"
+END
+OPTION "mm-dd-yyyy"
+date = "%2m-%2d-%3y"
+END
+OPTION "mmddyy"
+date = "%2m%2d%{2y%100}"
+END
+OPTION "mm.dd.yy"
+date = "%2m.%2d.%{2y%100}"
+END
+
+END
+
+
+SETTING long_date
+use = "use short time"
+
+month[0] = "January"
+month[1] = "February"
+month[2] = "March"
+month[3] = "April"
+month[4] = "May"
+month[5] = "June"
+month[6] = "Jule"
+month[7] = "August"
+month[8] = "Sepember"
+month[9] = "Octember"
+month[10] = "November"
+month[11] = "December"
+
+OPTION "dd MMMM yyyy"
+date = "%2d %M %1y"
+END
+
+OPTION "MMMM dd yyyy"
+date = "%M %2d %1y"
+END
+
+OPTION "use short time"
+date = null
+END
+
+END
+
+
 SETTING timekeeping
 use = "24-hour clock"
 
