--- a/epilepsi.conf
+++ b/epilepsi.conf
@@ -1,3 +1,8 @@
+SETTING timezone
+utc = no
+END
+
+
 SETTING time_date
 use = "date time"
 
@@ -231,5 +236,4 @@ left_cycle = ("elapsed[0]", "countdown[0]", null)
 right_cycle = ("duration[0]", "countdown[0]", null)
 bar_cycle = ("procent[0]", "procent[1]", null)
 END
-
 
