consider timezone changes
Signed-off-by: Mattias Andrée <maandree@operamail.com>

--- a/epilepsi.conf
+++ b/epilepsi.conf
@@ -102,31 +102,34 @@ END
 
 SETTING timekeeping
 use = "24-hour clock"
+repeat_no = ""
+repeat_pre = "'"
+repeat_post = "''"
 
 OPTION "24-hour clock"
 end_of_day = "24:00"
-time[0..23] = "%2h:%2m:%2s"
-time_lax[0..23] = "%2h:%2m"
+time[0..23] = "%2h:%2m:%2s%r"
+time_lax[0..23] = "%2h:%2m%r"
 END
 
 OPTION "Common 12-hour clock"
 end_of_day = "12 midnight"
-time[0..0] = "12:%2m:%2s a.m."
-time[1..11] = "%1h:%2m:%2s a.m."
-time[12..12] = "12:%2m:%2s p.m."
-time[13..13] = "%{1h-12}:%2m:%2s p.m."
-time_lax[0..0] = "12:%2m a.m."
-time_lax[1..11] = "%1h:%2m a.m."
-time_lax[12..12] = "12:%2m p.m."
-time_lax[13..13] = "%{1h-12}:%2m p.m."
+time[0..0] = "12:%2m:%2s%r a.m."
+time[1..11] = "%1h:%2m:%2s%r a.m."
+time[12..12] = "12:%2m:%2s%r p.m."
+time[13..13] = "%{1h-12}:%2m:%2s%r p.m."
+time_lax[0..0] = "12:%2m%r a.m."
+time_lax[1..11] = "%1h:%2m%r a.m."
+time_lax[12..12] = "12:%2m%r p.m."
+time_lax[13..13] = "%{1h-12}:%2m%r p.m."
 END
 
 OPTION "Japanese 12-hour clock"
 end_of_day = "12:00 p.m."
-time[0..12] = "%2h:%2m:%2s a.m."
-time[13..23] = "%{2h-12}:%2m:%2s p.m."
-time_lax[0..12] = "%2h:%2m a.m."
-time_lax[13..23] = "%{2h-12}:%2m p.m."
+time[0..12] = "%2h:%2m:%2s%r a.m."
+time[13..23] = "%{2h-12}:%2m:%2s%r p.m."
+time_lax[0..12] = "%2h:%2m%r a.m."
+time_lax[13..23] = "%{2h-12}:%2m%r p.m."
 END
 
 END
