m misc + numberic configs
Signed-off-by: Mattias Andrée <maandree@operamail.com>

--- a/epilepsi.conf
+++ b/epilepsi.conf
@@ -5,6 +5,8 @@ END
 
 SETTING time_date
 use = "date time"
+# %D = date
+# %T = time
 
 OPTION "date time"
 date = "%D %T"
@@ -17,20 +19,36 @@ END
 
 
 SETTING short_date
-use = 
+use = "yyyy-(mm)MMM-dd"
+# %y = year
+# %m = month (index)
+# %m = month (name)
+# %d = day
+# %V = ISO week number
+# %W = week number of your
+# %w = day of the week (index)
+# %D = day of the week (name)
 
-month[0] = "Jan"
-month[1] = "Feb"
-month[2] = "Mar"
-month[3] = "Apr"
-month[4] = "May"
-month[5] = "Jun"
-month[6] = "Jul"
-month[7] = "Aug"
-month[8] = "Sep"
-month[9] = "Oct"
-month[10] = "Nov"
-month[11] = "Dec"
+month[1] = "Jan"
+month[2] = "Feb"
+month[3] = "Mar"
+month[4] = "Apr"
+month[5] = "May"
+month[6] = "Jun"
+month[7] = "Jul"
+month[8] = "Aug"
+month[9] = "Sep"
+month[10] = "Oct"
+month[11] = "Nov"
+month[12] = "Dec"
+
+day[1] = "Mon"
+day[2] = "Tue"
+day[3] = "Wed"
+day[4] = "Thu"
+day[5] = "Fri"
+day[6] = "Sat"
+day[7] = "Sun"
 
 OPTION "yyyy-(mm)MMM-dd"
 date = "%3y-(%2m)%M-%2d"
@@ -71,28 +89,42 @@ END
 
 SETTING long_date
 use = "use short time"
+# %y = year
+# %m = month (index)
+# %m = month (name)
+# %d = day
+# %V = ISO week number
+# %W = week number of your
+# %w = day of the week (index)
+# %D = day of the week (name)
 
-month[0] = "January"
-month[1] = "February"
-month[2] = "March"
-month[3] = "April"
-month[4] = "May"
-month[5] = "June"
-month[6] = "Jule"
-month[7] = "August"
-month[8] = "Sepember"
-month[9] = "Octember"
-month[10] = "November"
-month[11] = "December"
+month[1] = "January"
+month[2] = "February"
+month[3] = "March"
+month[4] = "April"
+month[5] = "May"
+month[6] = "June"
+month[7] = "Jule"
+month[8] = "August"
+month[9] = "Sepember"
+month[10] = "Octember"
+month[11] = "November"
+month[12] = "December"
+
+day[1] = "Monday"
+day[2] = "Tuesday"
+day[3] = "Wednesday"
+day[4] = "Thursay"
+day[5] = "Friday"
+day[6] = "Saturday"
+day[7] = "Sunday"
 
 OPTION "dd MMMM yyyy"
 date = "%2d %M %1y"
 END
-
 OPTION "MMMM dd yyyy"
 date = "%M %2d %1y"
 END
-
 OPTION "use short time"
 date = null
 END
@@ -100,8 +132,26 @@ END
 END
 
 
+SETTING calendar
+first_day = 1
+
+day[1] = "M"
+day[2] = "T"
+day[3] = "W"
+day[4] = "T"
+day[5] = "F"
+day[6] = "S"
+day[7] = "S"
+END
+
+
 SETTING timekeeping
 use = "24-hour clock"
+# %h = hour
+# %m = minute
+# %s = second
+# %r = repeat
+
 repeat_no = ""
 repeat_pre = "'"
 repeat_post = "''"
@@ -136,6 +186,15 @@ END
 
 
 SETTING time
+# %w = weeks
+# %d = days
+# %h = hours
+# %m = minutes
+# %s = seconds
+# %p = procents, integer part
+# %P = procents, float part
+
+SECTION "time"
 use = "mm:ss"
 
 OPTION "m'ss''"
@@ -190,14 +249,48 @@ countdown[$0,d] = "−%1dd%2h:%2m:%2s.%{$0S[$0]}"
 countdown[$0,w] = null
 END
 
+END
+
+SECTION "procent"
+use = "0,123 %"
+
+OPTION "0,123 %"
+procent[0] = "%{1p[100]} %%"
+procent[$0] = "%{1p[100]},%{$0P[100,$0]} %%"
+END
+OPTION "0.123 %"
 procent[0] = "%{1p[100]} %%"
 procent[$0] = "%{1p[100]}.%{$0P[100,$0]} %%"
+END
+OPTION ".123 %"
+procent[0] = "%{1p[100]} %%"
+procent[$0] = "%{0p[100]}.%{$0P[100,$0]} %%"
+END
+OPTION "0,123%"
+procent[0] = "%{1p[100]}%%"
+procent[$0] = "%{1p[100]},%{$0P[100,$0]}%%"
+END
+OPTION "0.123%"
+procent[0] = "%{1p[100]}%%"
+procent[$0] = "%{1p[100]}.%{$0P[100,$0]}%%"
+END
+OPTION ".123%"
+procent[0] = "%{1p[100]}%%"
+procent[$0] = "%{0p[100]}.%{$0P[100,$0]}%%"
+END
+
+END
 
 END
 
 
 SETTING duration
 use = "mm:ss"
+# %w = weeks
+# %d = days
+# %h = hours
+# %m = minutes
+# %s = seconds
 
 OPTION "m'ss''"
 duration[0,s] = "0'%2s''"
@@ -238,5 +331,290 @@ bar = 1
 left_cycle = ("elapsed[0]", "countdown[0]", null)
 right_cycle = ("duration[0]", "countdown[0]", null)
 bar_cycle = ("procent[0]", "procent[1]", null)
+END
+
+
+SETTING outof
+# %c = count
+# %t = total
+# %p = procents (integer part)
+# %P = procents (float part)
+
+use = "c of t"
+
+OPTION "c of t"
+votes = "%c of %t"
+END
+OPTION "procent"
+votes = "%{1p[100]}.%{1P[100,1]} %%"
+END
+
+END
+
+
+SETTING integer
+# %i = integer part
+# %P = as if positive
+
+radix = "0123456789"
+
+SECTION "grouping"
+use = "spaces between groups of 3"
+OPTION "spaces between groups of 3"
+group = 3
+space = " "
+END
+OPTION "apostrophe between groups of 3"
+group = 3
+space = "'"
+END
+OPTION "comma between groups of 3"
+group = 3
+space = ","
+END
+OPTION "ungrouped"
+group = 0
+space = ""
+END
+END
+
+SECTION "format"
+use = "normal"
+zero =  "0"
+positive = "%1i"
+OPTION "normal"
+negative = "−%P"
+END
+OPTION "bracketed negatives"
+negative = "(%P)"
+END
+END
+
+END
+
+
+SETTING irrational
+# %i = integer part
+# %f = float part
+# %P = as if positive
+
+zero = "0"
+radix = "0123456789"
+
+SECTION "integer grouping"
+use = "spaces between groups of 3"
+OPTION "spaces between groups of 3"
+group[i] = 3
+space[i] = " "
+END
+OPTION "apostrophe between groups of 3"
+group[i] = 3
+space[i] = "'"
+END
+OPTION "comma between groups of 3"
+group[i] = 3
+space[i] = ","
+END
+OPTION "ungrouped"
+group[i] = 0
+space[i] = ""
+END
+END
+
+SECTION "float grouping"
+use = "ungrouped"
+OPTION "spaces between groups of 3"
+group[f] = 3
+space[f] = " "
+END
+OPTION "apostrophe between groups of 3"
+group[f] = 3
+space[f] = "'"
+END
+OPTION "comma between groups of 3"
+group[f] = 3
+space[f] = ","
+END
+OPTION "ungrouped"
+group[f] = 0
+space[f] = ""
+END
+END
+
+SECTION "negatives"
+use = "normal"
+OPTION "normal"
+negative_integer = "−%P"
+END
+OPTION "bracketed"
+negative_float = "(%P)"
+END
+END
+
+SECTION "format"
+use = ""
+
+OPTION "0,12345"
+positive_integer = "%1i"
+positive_float = "%1i,%{f[5]}"
+END
+OPTION "0.12345"
+positive_integer = "%1i"
+positive_float = "%1i.%{f[5]}"
+END
+OPTION ".12345"
+positive_integer = "%1i"
+positive_float = "%0i.%{f[5]}"
+END
+END
+
+END
+
+
+SETTING rational
+# %i = integer part
+# %f = float part
+# %F = periodic part as if float part
+# %p = periodic part
+# %P = as if positive
+
+zero = "0"
+radix = "0123456789"
+
+SECTION "integer grouping"
+use = "spaces between groups of 3"
+OPTION "spaces between groups of 3"
+group[i] = 3
+space[i] = " "
+END
+OPTION "apostrophe between groups of 3"
+group[i] = 3
+space[i] = "'"
+END
+OPTION "comma between groups of 3"
+group[i] = 3
+space[i] = ","
+END
+OPTION "ungrouped"
+group[i] = 0
+space[i] = ""
+END
+END
+
+SECTION "float grouping"
+use = "ungrouped"
+OPTION "spaces between groups of 3"
+group[f] = 3
+space[f] = " "
+END
+OPTION "apostrophe between groups of 3"
+group[f] = 3
+space[f] = "'"
+END
+OPTION "comma between groups of 3"
+group[f] = 3
+space[f] = ","
+END
+OPTION "ungrouped"
+group[f] = 0
+space[f] = ""
+END
+END
+
+SECTION "period grouping"
+use = "ungrouped"
+OPTION "spaces between groups of 3"
+group[p] = 3
+space[p] = " "
+END
+OPTION "apostrophe between groups of 3"
+group[p] = 3
+space[p] = "'"
+END
+OPTION "comma between groups of 3"
+group[p] = 3
+space[p] = ","
+END
+OPTION "ungrouped"
+group[p] = 0
+space[p] = ""
+END
+END
+
+SECTION "negatives"
+use = "normal"
+OPTION "normal"
+negative_integer = "−%P"
+END
+OPTION "bracketed"
+negative_float = "(%P)"
+END
+END
+
+SECTION "format"
+use = "0,,3"
+positive_integer = "%1i"
+OPTION "0,33333"
+positive_float = "%1i,%f"
+positive_periodic = "%0i.%f%{F[5]}"
+periodic_diacritical = ""
+END
+OPTION "0.33333"
+positive_float = "%1i.%f"
+positive_periodic = "%0i.%f%{F[5]}"
+periodic_diacritical = ""
+END
+OPTION ".33333"
+positive_float = "%0i.%f"
+positive_periodic = "%0i.%f%{F[5]}"
+periodic_diacritical = ""
+END
+OPTION "0,,3"
+positive_float = "%1i,%f"
+positive_periodic = "%1i,%f.%p"
+periodic_diacritical = ""
+END
+OPTION "0..3"
+positive_float = "%1i.%f"
+positive_periodic = "%1i.%f.%p"
+periodic_diacritical = ""
+END
+OPTION "..3"
+positive_float = "%0i.%f"
+positive_periodic = "%0i.%f.%p"
+periodic_diacritical = ""
+END
+OPTION "0,̇3"
+positive_float = "%1i,%f"
+positive_periodic = "%1i,%f%p"
+periodic_diacritical = "̇"
+END
+OPTION "0.̇3"
+positive_float = "%1i.%f"
+positive_periodic = "%1i.%f%p"
+periodic_diacritical = "̇"
+END
+OPTION ".̇3"
+positive_float = "%0i.%f"
+positive_periodic = "%0i.%f%p"
+periodic_diacritical = "̇"
+END
+OPTION "0,͞3"
+positive_float = "%1i,%f"
+positive_periodic = "%1i,%f%p"
+periodic_diacritical = "̅"
+END
+OPTION "0.͞3"
+positive_float = "%1i.%f"
+positive_periodic = "%1i.%f%p"
+periodic_diacritical = "̅"
+END
+OPTION ".̅3"
+positive_float = "%0i.%f"
+positive_periodic = "%0i.%f%p"
+periodic_diacritical = "̅"
+END
+END
+
 END
 
