document conf file
Signed-off-by: Mattias Andrée <maandree@operamail.com>

--- a/epilepsi.conf
+++ b/epilepsi.conf
@@ -1,32 +1,53 @@
+# Keywords:
+#   use  : The OPTION to use
+#   END  : The end of something that is in uppercase
+#   yes  : Boolean value : true
+#   no   : Boolean value : false
+#   null : Not definied
+
+
+# Timezone settings
+# 
+# utc : Whether to use always use UTC, otherwise, always local timezone
 SETTING timezone
   utc = no
 END
 
 
+# How to combine time and date
+# 
+# datetime : The format with which to print time and date
+# 
+# %D = date
+# %T = time
 SETTING time_date
-  use = "date time"
-  # %D = date
-  # %T = time
+  use "date time"
 
   OPTION "date time"
-    date = "%D %T"
+    datetime = "%D %T"
   END
   OPTION "time date"
-    date = "%T %D"
+    datetime = "%T %D"
   END
 END
 
 
+# How to print dates in short form
+# 
+# month : The name of the months, in short form
+# day   : The name of the week days, in short form
+# date  : The format with which to print dates in short form
+# 
+# %y = year
+# %m = month (index)
+# %m = month (name)
+# %d = day
+# %V = ISO week number
+# %W = week number of your
+# %w = day of the week (index)
+# %D = day of the week (name)
 SETTING short_date
-  use = "yyyy-(mm)MMM-dd"
-  # %y = year
-  # %m = month (index)
-  # %m = month (name)
-  # %d = day
-  # %V = ISO week number
-  # %W = week number of your
-  # %w = day of the week (index)
-  # %D = day of the week (name)
+  use "yyyy-(mm)MMM-dd"
 
   month[1] = "Jan"
   month[2] = "Feb"
@@ -85,16 +106,22 @@ SETTING short_date
 END
 
 
+# How to print dates in long form
+# 
+# month : The name of the months, in long form
+# day   : The name of the week days, in long form
+# date  : The format with which to print dates in long form
+# 
+# %y = year
+# %m = month (index)
+# %m = month (name)
+# %d = day
+# %V = ISO week number
+# %W = week number of your
+# %w = day of the week (index)
+# %D = day of the week (name)
 SETTING long_date
-  use = "use short time"
-  # %y = year
-  # %m = month (index)
-  # %m = month (name)
-  # %d = day
-  # %V = ISO week number
-  # %W = week number of your
-  # %w = day of the week (index)
-  # %D = day of the week (name)
+  use "use short time"
 
   month[1] = "January"
   month[2] = "February"
@@ -129,6 +156,10 @@ SETTING long_date
 END
 
 
+# Calendar settings
+# 
+# first_day : The first day of the week (Monday = 1, Sunday = 7)
+# day       : The name of the week days, in very short form
 SETTING calendar
   first_day = 1
 
@@ -142,12 +173,21 @@ SETTING calendar
 END
 
 
+# How to print clock times
+# 
+# repeat_no   : %r for times that only occurs once in a day
+# repeat_pre  : %r for times that occurs twice (due to timezone change), the first time
+# repeat_post : %r for times that occurs twice (due to timezone change), the second time
+# end_of_day  : How to print the time 24:00
+# time        : How to print times with seconds
+# time_lax    : How to print times without seconds
+# 
+# %h = hour
+# %m = minute
+# %s = second
+# %r = repeat
 SETTING timekeeping
-  use = "24-hour clock"
-  # %h = hour
-  # %m = minute
-  # %s = second
-  # %r = repeat
+  use "24-hour clock"
 
   repeat_no = ""
   repeat_pre = "'"
@@ -179,17 +219,22 @@ SETTING timekeeping
 END
 
 
+# How to print elapsed time
+# 
+# elapsed   : How to print the amount of time elapsed from the start time
+# countdown : How to print the amount of time remaining form the end time
+# procent   : How to print the amount of time elapsed relative to the duration
+# 
+# %w = weeks
+# %d = days
+# %h = hours
+# %m = minutes
+# %s = seconds
+# %p = procents, integer part
+# %P = procents, float part
 SETTING time
-  # %w = weeks
-  # %d = days
-  # %h = hours
-  # %m = minutes
-  # %s = seconds
-  # %p = procents, integer part
-  # %P = procents, float part
-
   SECTION "time"
-    use = "mm:ss"
+    use "mm:ss"
 
     OPTION "m'ss''"
       elapsed[0,s] = "0'%2s''"
@@ -244,7 +289,7 @@ SETTING time
   END
 
   SECTION "procent"
-    use = "0,123 %"
+    use "0,123 %"
 
     OPTION "0,123 %"
       procent[0] = "%{1p[100]} %%"
@@ -274,13 +319,17 @@ SETTING time
 END
 
 
+# How to print durations
+# 
+# duration : How to print durations
+# 
+# %w = weeks
+# %d = days
+# %h = hours
+# %m = minutes
+# %s = seconds
 SETTING duration
-  use = "mm:ss"
-  # %w = weeks
-  # %d = days
-  # %h = hours
-  # %m = minutes
-  # %s = seconds
+  use "mm:ss"
 
   OPTION "m'ss''"
     duration[0,s] = "0'%2s''"
@@ -295,7 +344,6 @@ SETTING duration
     duration[$0,d] = "%1dd %1h %1m'%2s.%{$0S[$0]}''"
     duration[$0,w] = "%1ww %1dd %1h %1m'%2s.%{$0S[$0]}''"
   END
-
   OPTION "mm:ss"
     duration[0,s] = "00:%2s"
     duration[0,m] = "%2m:%2s"
@@ -312,42 +360,70 @@ SETTING duration
 END
 
 
+# Settings for the timebar
+# 
+# presistent  : Whether changes made in the program are saved
+# left        : The element (by index) to use in `left_cycle`
+# right       : The element (by index) to use in `right_cycle`
+# bar         : The element (by index) to use in `bar_cycle`
+# left_cycle  : Cycle of display styles that can be shown left to the timebar
+# right_cycle : Cycle of display styles that can be shown right to the timebar
+# bar_cycle   : Cycle of display styles that can be shown on to the timebar
 SETTING timebar
+  presistent = no
+  
   left = 0
   right = 0
   bar = 1
-
+  
   left_cycle = ("elapsed[0]", "countdown[0]", null)
   right_cycle = ("duration[0]", "countdown[0]", null)
   bar_cycle = ("procent[0]", "procent[1]", null)
 END
 
 
+# How to print A out of B
+# 
+# votes : The print format
+# 
+# %c = count
+# %t = total
+# %p = procents (integer part)
+# %P = procents (float part)
 SETTING outof
-  # %c = count
-  # %t = total
-  # %p = procents (integer part)
-  # %P = procents (float part)
-
-  use = "c of t"
+  use "c of t"
 
   OPTION "c of t"
     votes = "%c of %t"
   END
+  OPTION "c / t"
+    votes = "%c / %t"
+  END
   OPTION "procent"
     votes = "%{1p[100]}.%{1P[100,1]} %%"
+  END
+  OPTION "procent without space"
+    votes = "%{1p[100]}.%{1P[100,1]}%%"
   END
 END
 
 
+# How to print integers
+# 
+# radix    : The digits to use
+# group    : The size of digit groups
+# space    : The characters to put between groups
+# zero     : How to print the value zero
+# positive : How to print positive values
+# negative : How to print negative values
+# 
+# %i = integer part
+# %P = as if positive
 SETTING integer
-  # %i = integer part
-  # %P = as if positive
-
   radix = "0123456789"
 
   SECTION "grouping"
-    use = "spaces between groups of 3"
+    use "spaces between groups of 3"
     OPTION "spaces between groups of 3"
       group = 3
       space = " "
@@ -367,7 +443,7 @@ SETTING integer
   END
 
   SECTION "format"
-    use = "normal"
+    use "normal"
     zero =  "0"
     positive = "%1i"
     OPTION "normal"
@@ -380,16 +456,26 @@ SETTING integer
 END
 
 
+# How to print irrational numbers
+# 
+# radix            : The digits to use
+# zero             : How to print the value zero
+# group            : The size of digit groups
+# space            : The characters to put between groups
+# positive_integer : How to print positive values that are integers
+# negative_integer : How to print negative values that are integers
+# positive_float   : How to print positive values that are not integers
+# negative_float   : How to print negative values that are not integers
+# 
+# %i = integer part
+# %f = float part
+# %P = as if positive
 SETTING irrational
-  # %i = integer part
-  # %f = float part
-  # %P = as if positive
-
-  zero = "0"
   radix = "0123456789"
+  zero = "0"
 
   SECTION "integer grouping"
-    use = "spaces between groups of 3"
+    use "spaces between groups of 3"
     OPTION "spaces between groups of 3"
       group[i] = 3
       space[i] = " "
@@ -409,7 +495,7 @@ SETTING irrational
   END
 
   SECTION "float grouping"
-    use = "ungrouped"
+    use "ungrouped"
     OPTION "spaces between groups of 3"
       group[f] = 3
       space[f] = " "
@@ -429,7 +515,7 @@ SETTING irrational
   END
 
   SECTION "negatives"
-    use = "normal"
+    use "normal"
     OPTION "normal"
       negative_integer = "−%P"
     END
@@ -439,8 +525,7 @@ SETTING irrational
   END
 
   SECTION "format"
-    use = ""
-
+    use ""
     OPTION "0,12345"
       positive_integer = "%1i"
       positive_float = "%1i,%{f[5]}"
@@ -457,18 +542,31 @@ SETTING irrational
 END
 
 
+# How to print rational numbers
+# 
+# radix                : The digits to use
+# zero                 : How to print the value zero
+# group                : The size of digit groups
+# space                : The characters to put between groups
+# positive_integer     : How to print positive values that are integers
+# negative_integer     : How to print negative values that are integers
+# positive_float       : How to print positive values that are not integers and not periodic
+# negative_float       : How to print negative values that are not integers and not periodic
+# positive_periodic    : How to print positive values that are not integers but is periodic
+# negative_periodic    : How to print negative values that are not integers but is periodic
+# periodic_diacritical : Prefix to each characters in %p
+# 
+# %i = integer part
+# %f = float part
+# %F = periodic part as if float part
+# %p = periodic part
+# %P = as if positive
 SETTING rational
-  # %i = integer part
-  # %f = float part
-  # %F = periodic part as if float part
-  # %p = periodic part
-  # %P = as if positive
-
-  zero = "0"
   radix = "0123456789"
+  zero = "0"
 
   SECTION "integer grouping"
-    use = "spaces between groups of 3"
+    use "spaces between groups of 3"
     OPTION "spaces between groups of 3"
       group[i] = 3
       space[i] = " "
@@ -488,7 +586,7 @@ SETTING rational
   END
 
   SECTION "float grouping"
-    use = "ungrouped"
+    use "ungrouped"
     OPTION "spaces between groups of 3"
       group[f] = 3
       space[f] = " "
@@ -508,7 +606,7 @@ SETTING rational
   END
 
   SECTION "period grouping"
-    use = "ungrouped"
+    use "ungrouped"
     OPTION "spaces between groups of 3"
       group[p] = 3
       space[p] = " "
@@ -528,7 +626,7 @@ SETTING rational
   END
 
   SECTION "negatives"
-    use = "normal"
+    use "normal"
     OPTION "normal"
       negative_integer = "−%P"
     END
@@ -538,7 +636,7 @@ SETTING rational
   END
 
   SECTION "format"
-    use = "0,,3"
+    use "0,,3"
     positive_integer = "%1i"
     OPTION "0,33333"
       positive_float = "%1i,%f"
